syntax = "proto3";

option csharp_namespace = "OrderService.Grpc";

package order;

service OrderGrpc {
  rpc GetOrder (OrderRequest) returns (OrderResponse);
  rpc GetAllOrders (Empty) returns (OrderListResponse);
}

message OrderRequest {
  int32 id = 1;
}

message OrderResponse {
  int32 id = 1;
  int32 catalogItemId = 2;
  int32 quantity = 3;
  string status = 4;
}

message OrderListResponse {
  repeated OrderResponse orders = 1;
}

message Empty {}
